--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script>
     jQuery(document).ready(function () {
       //uses source from online(make sure the file has CORS access enabled if used in cross-domain)
-      var pdf = 'https://raw.githubusercontent.com/tech-bhc/magazines/main/files/august.pdf';
+      var pdf = 'https://drive.google.com/file/d/1lZf30ZICKKjXUlK8siYl63ozizz09-y6/view?usp=sharing';
       var options = {
         height:2000,
         duration: 700,
