--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script>
     jQuery(document).ready(function () {
       //uses source from online(make sure the file has CORS access enabled if used in cross-domain)
-      var pdf = 'https://drive.google.com/file/d/1lZf30ZICKKjXUlK8siYl63ozizz09-y6/view?usp=sharing';
+      var pdf = 'https://github.com/Singhavi279/pregatips-ebook/blob/49b3cb379c48943c449b7f5ef1b28a58a974f39d/Booklet_Final.pdf';
       var options = {
         height:2000,
         duration: 700,
