--- a/index.html
+++ b/index.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>PDF</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  
-  <!-- Flipbook StyleSheet -->
-  <link href="lib/css/min.css" rel="stylesheet" type="text/css">
-  <!-- Icons Stylesheet -->
-  <link href="lib/css/themify-icons.min.css" rel="stylesheet" type="text/css">
-  
+  <title>PDF Flipbook</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+  <!-- Flipbook CSS -->
+  <link rel="stylesheet" href="lib/css/min.css" type="text/css">
+  <!-- Icon CSS -->
+  <link rel="stylesheet" href="lib/css/themify-icons.min.css" type="text/css">
+
+  <!-- Tailwind (optional, for styling convenience) -->
   <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
-<body>
+<body class="bg-gray-900 flex justify-center items-center min-h-screen">
 
-  <div id="flipbookContainer">
-  </div>
+  <!-- Flipbook Container -->
+  <div id="flipbookContainer" class="w-full max-w-7xl"></div>
 
+  <!-- jQuery -->
+  <script src="lib/js/libs/jquery.min.js" defer></script>
+  <!-- dFlip Flipbook Library -->
+  <script src="lib/js/dflip.min.js" defer></script>
 
-  <!-- jQuery  -->
-  <script src="lib/js/libs/jquery.min.js" type="text/javascript"></script>
-  <!-- Flipbook main Js file -->
-  <script src="lib/js/dflip.min.js" type="text/javascript"></script>
-  <!-- Flipbook main Js file -->
-  <script>
-    jQuery(document).ready(function () {
-      //uses source from online(make sure the file has CORS access enabled if used in cross-domain)
-      var pdf = 'https://raw.githubusercontent.com/Singhavi279/pregatips-ebook/main/Booklet.pdf';
-      var options = {
-        height:2000,
+  <!-- Initialization Script -->
+  <script defer>
+    document.addEventListener("DOMContentLoaded", function () {
+      const pdf = 'Booklet.pdf'; // PDF in the same directory as index.html
+
+      const options = {
+        height: 2000,
         duration: 700,
         backgroundColor: "#2F2D2F"
       };
-      var flipBook = $("#flipbookContainer").flipBook(pdf, options);
+
+      // Wait until jQuery and dFlip are fully available
+      const initFlipbook = () => {
+        if (window.jQuery && jQuery.fn.flipBook) {
+          $("#flipbookContainer").flipBook(pdf, options);
+        } else {
+          // Retry after a short delay if scripts aren't ready yet
+          setTimeout(initFlipbook, 100);
+        }
+      };
+
+      initFlipbook();
     });
   </script>
 
